UHD CML GT2 + PSR displays incorrect frames
When PSR is enabled, I can frequently see an incorrect (past) frame being displayed on the screen, causing "flicker-like" behavior.
The following video shows me typing 'm' in xterm without compositor on Xorg 1.21.1.3, kernel 5.15 (debian unstable):
Occasionally this behavior becomes so frequent that working becomes impossible. When this happens, /sys/kernel/debug/dri/0/i915_edp_psr_status shows:
Sink support: yes [0x03]
PSR mode: PSR2 enabled
Source PSR ctl: disabled [0x40002816]
Source PSR status: TG_ON [0xa4000110]
Busy frontbuffer bits: 0x00000000
Frame: PSR2 SU blocks:
0 0
1 0
2 0
3 0
4 0
5 0
6 0
7 0
by repeatedly catting the status file, ctl/status cycles through several combination of values:
Source PSR ctl: enabled [0xc0002816]
Source PSR status: SLEEP [0x30020135]
Source PSR ctl: disabled [0x40002816]
Source PSR status: IDLE [0x04010030]
Booting with i915.enable_psr=0 makes the issue disappear completely (default is -1).